Reduce pinyin.txt

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <form>
     <h1>密码强度计算器</h1>
+    <a href="https://github.com/weilycoder/passwd_checker">
+      <img src="https://img.shields.io/github/stars/weilycoder/passwd_checker">
+    </a>
     <p>在下面的输入框中输入一段密码，可以计算密码的强度。
       所有的计算发生在本地，你的密码不会被记录或上传。</p>
     <p><label for="password">密码: </label><br><input type="password" id="password" /></p>
