--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       </span>
     </div>
     <p id="quality-description" style="text-align: center"></p>
+    <p style="text-align: right">
+      <button type="button" id="download">Download Report</button>
+    </p>
   </form>
   <script type="py" src="./checker.py"></script>
   <script type="py" src="./script.py"></script>
